Listening link replacement

--- a/My hobbies.html
+++ b/My hobbies.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="https://youtu.be/gXyDChaiqJI">Reading books</a></li>
             <li>Cooking</li>
-            <li><a href="https://youtu.be/gXyDChaiqJI">Listening music</a></li>
+            <li><a href="https://open.spotify.com/">Listening music</a></li>
         </ul>
     </body>
 </html>
